tests/tests/checks/snapshots/analysis/cpp/big_cpp.cpp/check_glob@include_big_header__prodhtml.snap
---
source: tests/test_check_insta.rs
expression: "&aggr_str"
---
<div role="row" id="line-NORM" class="source-line-with-number">
  <div role="cell"></div>
  <div role="cell"></div>
  <div role="cell" class="line-number" data-line-number="NORM"></div>
  <code role="cell" class="source-line"><span class="syn_reserved" >#include</span> <span class="syn_string" data-symbols="FILE_big_header@2Eh">"big_header.h"</span>
</code>
</div>

